--- a/management.css
+++ b/management.css
@@ -3,6 +3,20 @@ body {
     font-family: Segoe Print;
 }
 
+#messages {
+    width: 100%;
+    height: 10vh;
+    background-color: rgba(19, 17, 17, 0.8);
+    color: white;
+    text-align: center;
+    font-size: 5vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    display: none;
+}
+
 .productBox {
     width: 90%;
     height: 270px;
@@ -44,12 +58,14 @@ body {
 
 button {
     display: block;
+    width: auto;
     margin: 5px auto;
     background-color: rgb(156, 154, 160);
     border: none;
     border-radius: 5vw;
     color: white;
     font-family: inherit;
+
 }
 
 button:focus {
@@ -121,7 +137,7 @@ input[type="file"] {
     width: 70%;
     display: block;
     position: relative;
-    margin: 5px auto;
+    margin: 5px auto 12px;
 }
 
 .browse-change::before {
