--- a/management.css
+++ b/management.css
@@ -56,6 +56,14 @@ body {
     margin: 5px auto;
 }
 
+.noimage {
+   display: none;
+   text-align: center;
+   box-sizing: border-box;
+   margin: 100px auto auto auto;
+   color: rgb(15, 56, 131);
+}
+
 button {
     display: block;
     width: auto;
