--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     font-family: Segoe Print;
 }
 
+#pageBackground {
+    background: url("pictures/l.jpg") no-repeat center fixed;
+    background-size: cover;
+}
+
 #shopPage , #aboutPage , #contactPage , #cartPage , #sample-container {
     display: none;
 }
@@ -18,6 +23,19 @@ body {
     box-sizing: border-box;
     color: rgb(23, 25, 54);
     text-shadow: lightblue 10px 3px 20px;
+}
+
+#home-header {
+    font-family: Matura MT Script Capitals;
+    font-size: 25vh;
+    padding-top: 3vh;
+    box-sizing: border-box;
+    color: rgb(36, 65, 92);
+    /*color: rgb(75, 4, 4);
+    color: rgb(17, 133, 90);
+    color: rgb(22, 102, 102);*/
+    text-shadow: lightblue 10px 3px 20px;
+    text-align: center;
 }
 
 #menu {
@@ -62,8 +80,8 @@ body {
 }
 
 #content-part1 {
-    width: 50%;
-    margin: 10vh auto;
+    width: 90%;
+    margin: 5vh auto;
     text-align: justify;
     font-size: 5vh;
     font-family: Segoe Print;
@@ -102,7 +120,6 @@ body {
     width: 400px;
     height: 400px;
     margin: 20px auto;
-    background-color: white;
     background-size: contain;
     box-shadow:
         0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -117,7 +134,6 @@ body {
         0 6px 20px 0 rgba(27, 188, 236, 0.4);
 }
 
-
 .link {
     display: block;
     background-color: transparent;
@@ -127,21 +143,22 @@ body {
 
 .detail {
     width: 400px;
-    height: 100px;
-    background-color: rgba(255, 255, 255, 0.5);
+    height: 150px;
+    background-color: rgba(255, 255, 255, 0.8);
     visibility: hidden;
     font-size: 3vh;
     color: rgb(23, 63, 63);
     box-sizing: border-box;
     padding: 5px 20px;
     position: relative;
-    top: 300px;
-    border-radius: 20px;
+    top: 250px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 #content-part2 .detail{
-    height: 50px;
-    top: 350px;
+    height: 100px;
+    top: 300px;
 }
 
 .sample:hover .detail {
@@ -250,8 +267,17 @@ button:focus {
     
     padding-left: 10px;
 }
-#contact-part3 input[type="submit"] {
+#contact-part3 button {
+    display: block;
     width: auto;
+    height: auto;
+    margin-top: 1vh;
+    background-color: rgb(125, 123, 129);
+    border: none;
+    border-radius: 5vw;
+    color: white;
+    font-family: inherit;
+    font-size: 2.5vh;
 }
 #contact-part3 textarea:focus ,
 #contact-part3 input:focus {
@@ -346,6 +372,7 @@ button:focus {
 border: none;
 border-collapse: collapse;
 margin: 8vw auto 5vw;
+background-color: rgba(255, 255, 255, 0.75);
 }
 #sample-part3 table:hover {
     box-shadow:
@@ -376,7 +403,7 @@ margin: 8vw auto 5vw;
     width: 25vw;
     height: 4vw;
     margin: 1vh auto;
-    background-color: rgb(196, 194, 201);
+    background-color: rgb(45, 42, 54);
     border: none;
     border-radius: 5vw;
     color: white;
@@ -392,6 +419,7 @@ margin: 8vw auto 5vw;
 
 
 /*================================================= cart page =================================================*/
+
 #cart-box-container {
     float: right;
     width: 50%;
@@ -406,6 +434,7 @@ margin: 8vw auto 5vw;
         0 4px 8px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
 }
 
 .cart-box-part1 {
@@ -525,7 +554,8 @@ margin: 8vw auto 5vw;
     box-shadow:
         0 4px 8px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;    
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);  
 }
 
 #invoice h2 {
@@ -574,6 +604,49 @@ margin: 8vw auto 5vw;
     font-size: 5vmin;
 }
 
+/*================================================= footer =================================================*/
+
+#footer {
+    width: 100%;
+    background-color: rgba(20, 20, 30, 0.8);
+    height: 500px;
+    clear: both;
+}
+
+#footer>div {
+    float: left;
+    width: 27%;
+    margin: 10vh 3%;
+    text-align: justify;
+    color: rgb(231, 241, 241);
+    font-size: 2vmax;
+    margin-bottom: 0;
+    line-height: 1.5;
+}
+
+#footer>div::first-line {
+    font-size: 2.5vmax;
+    color: rgb(84, 84, 146);
+}
+
+#footer>div a {
+    text-decoration: none;
+    color: rgb(231, 241, 241);
+}
+#footer>div a:hover {
+    color: rgb(84, 84, 146); 
+}
+
+/*================================================= more =================================================*/
+#aboutPage li {
+font-size: 4vh;
+color: rgb(40, 25, 51);
+}
+
+#aboutPage {
+    margin-bottom: 300px;
+}
+
 #hide-window {
     width: 100vw;
     height: 100vh;
@@ -615,41 +688,16 @@ margin: 8vw auto 5vw;
     color: green;
 }
 
-
-/*================================================= footer =================================================*/
-
-#footer {
+#confirmation {
     width: 100%;
-    background-color: rgba(20, 20, 30, 0.8);
-    height: 500px;
-    clear: both;
-}
-
-#footer>div {
-    float: left;
-    width: 27%;
-    margin: 10vh 3%;
-    text-align: justify;
-    color: rgb(231, 241, 241);
-    font-size: 2vmax;
-    margin-bottom: 0;
-    line-height: 1.5;
-}
-
-#footer>div::first-line {
-    font-size: 2.5vmax;
-    color: rgb(84, 84, 146);
-}
-
-#footer>div a {
-    text-decoration: none;
-    color: rgb(231, 241, 241);
-}
-#footer>div a:hover {
-    color: rgb(84, 84, 146); 
-}
-
-/*================================================= more =================================================*/
-#aboutPage li {
-font-size: 4vh;
+    height: 10vh;
+    background-color: rgba(19, 17, 17, 0.8);
+    color: white;
+    text-align: center;
+    font-size: 5vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    display: none;
 }
