--- a/management.css
+++ b/management.css
@@ -120,8 +120,8 @@ height: 500px;
     display: block;
 }
 .imgAddPreview {
-    height: 145px;
-    width: auto;
+    max-height: 145px;
+    max-width: 100%;
     display: none;
     margin: 5px auto;
 }
