--- a/style.css
+++ b/style.css
@@ -647,7 +647,7 @@ color: rgb(40, 25, 51);
     margin-bottom: 300px;
 }
 
-#hide-window {
+#hide-window , .cart-hide-window {
     width: 100vw;
     height: 100vh;
     background-color: rgba(19, 17, 17, 0.8);
